--- a/adam_shop/css/style.css
+++ b/adam_shop/css/style.css
@@ -2397,6 +2397,26 @@
      vertical-align: middle;
      white-space: nowrap;
 }
+#rating-info{
+    float: left;
+    width: 30%;
+    padding: 0;
+    list-style-type: none;
+}
+#submit-button{
+    padding: 5px 20px;
+    margin-top: 10px;
+}
+.star::before{
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    content: '\f005';
+}
  
 
 
