modified:   adam_shop/css/style.css

--- a/adam_shop/css/style.css
+++ b/adam_shop/css/style.css
@@ -1998,7 +1998,7 @@
 }
  .new-account-login h5 {
      font-size: 18px;
-     color: #1111111;
+     color: #d33b33;
      font-weight: 600;
 }
  .new-account-login h5 a:hover{
