--- a/adam_shop/css/login.css
+++ b/adam_shop/css/login.css
@@ -15,7 +15,7 @@ html {
      width: auto;
      padding: 40px;
      transform: translate(-50%, -50%);
-     background: rgb(0, 0, 0.5);
+     background: rgb(1, 27, 29);
      box-sizing: border-box;
      box-shadow: 0 15px 25px rgba(0,0,0,.6);
      border-radius: 10px;
@@ -85,6 +85,7 @@ html {
                  0 0 25px #03e9f4,
                  0 0 50px #03e9f4,
                  0 0 100px #03e9f4;
+    cursor: pointer;
    }
    
    .login-box a span {
@@ -184,4 +185,8 @@ body {
   background-image: url('../images/background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+}
+.btn-submit {
+  background-color: transparent;
+  border: none;
 }
